--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
   <div class="container">
       <label class="logo">Quizlet.</label>
         <li> <a href="#">Home</a></li>
-        <li> <a href="#">subjects</a></li>
+        <li>
+           <a href="#">subjects</a>
+        </li>
         <li> <a class="a11" href="#">expert solutions</a></li>
+  
       <form>
         <input type="text" placeholder="study sets, textbooks, questions">
       </form>
     <div class="butoni">
       <a class="a1" href="login.html"><button class="log-in">log in</button></a>
-      <a href=""><button class="sign-up">sign up</button></a>
+      <a href=""><button class="sign-up">sign up</button></a> 
     </div>
   </div>
     <div class="image-container">
@@ -26,7 +29,7 @@
         <h1>The best digital
         flashcards and
         study tools</h1>
-        <p>Join over 60 million students using Quizlet’s science-backed flashcards, practice tests and expert solutions to improve their grades and reach their goals.</p>
+        <p>Join over 60 million students using Quizlet’s science-backed flashcards, practice<li><a href="#">Exams</a></li> tests and expert solutions to improve their grades and reach their goals.</p>
           <button class="boom">sign up for free</button>
       </div>
     </div>
