--- a/login.html
+++ b/login.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>authorizacion</title>
+  <link rel="stylesheet" href="login..css">
 </head>
 <body>
-  <div>
+  <div class="div1">
     <input type="text" placeholder="email or phone number">
     <input type="text" placeholder="password">
     <button>log in</button>
